--- a/Form1.resx
+++ b/Form1.resx
@@ -333,4 +333,7 @@
         UAkgoOQkp05YCiggKAAAQt5wHAcBwHA//9k=
 </value>
   </data>
+  <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>180, 56</value>
+  </metadata>
 </root>
